welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:-6: error: Missing closing brace `}' assumed here
try {
^diff21:1: error: expected class or object definition
def diff21(n:Int): Int = {if (n>21) {return Math.abs(n-21)*2} else {return n-21} 
^